syntax = "proto3";

import "google/protobuf/empty.proto";

package aggregator;

service Aggregator {
  // schedule to prove with the aggregation input
  rpc proveAggregation(ProveAggregationRequest) returns (google.protobuf.Empty);
}

message ProveAggregationRequest {
  // block number to prove
  uint64 block_number = 1;

  // total number of subblocks
  uint32 num_subblocks = 2;

  // bincode serialized stdin builder: final_aggregator_stdin_builder.bin
  bytes input = 3;

  // bincode serialized final deferred digest used to verify with subblocks
  // for deserialization its original type is [KoalaBear; 8]
  bytes final_deferred_digest = 4;
}
